Property details added, common db and optimization in user model.
Property details added, common db and optimization in user model.